# image-gen-app

./: .gitignore  README.md  index.html  opencode.json  package-lock.json  package.json  vite.config.ts
docs/: ai-image-extraction-libraries-research.md  psd-import-export-research.md
public/presets/: manifest.json
scripts/: generatePresets.mjs  mcp-config-example.json  mcp-handlers.ts  mcp-http-server.ts  mcp-server.ts  test-mcp-handshake.cjs
src/: AnimationTab.tsx  App.tsx  LocalImage.tsx  PsdTab.tsx  VideoTab.tsx  animationPrompt.ts  config.example.ts  extractTools.ts  promptPresets.ts  psdService.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/styles/: App.css  global.css
