[package]
name = "image-gen-app"
version = "0.1.0"
description = "AI Image Generator Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "image_gen_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
